# textile-order-agent

./: .gitignore  AGENTS.md  README.md  app.py  chainlit.md  colorbridge.db  colorbridge_data.py  colorbridge_db.py  colorbridge_orders.py  colorbridge_schema.sql  colorbridge_tuning.py  colorbridge_visual.py  database.py  docker-compose.yml  pyproject.toml  色译通_ColorBridge_第二天即时冲刺与四人分工-2(1).md  评审纬度表.xls  黑客松项目说明.md
.chainlit/: config.toml
.chainlit/translations/: zh-CN.json
.claude/: plan-p0-and-builtin-ui.md
docs/: database-schema.md
docs/development/: colorbridge-tuning-agent-dev.md
docs/superpowers/plans/: 2026-07-11-colorbridge-mvp-implementation.md  2026-07-11-step3-spectral-confirmation-implementation.md  2026-07-12-colorbridge-tuning-agent-implementation.md
docs/superpowers/specs/: 2026-07-11-colorbridge-mvp-design.md  2026-07-11-step3-spectral-confirmation-design.md  2026-07-11-textile-order-agent-demo-design.md  2026-07-12-colorbridge-demo-data-tables.md  2026-07-12-colorbridge-demo-historical-batches.md  2026-07-12-colorbridge-demo-history-seed-data.md
public/: custom.css
public/elements/: RecipeWorkflowPanel.jsx
tests/: test_app_tools.py  test_colorbridge_orders.py  test_colorbridge_tuning.py  test_colorbridge_visual.py
web/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
web/app/: actions.ts  globals.css  layout.tsx  page.tsx
web/app/colorbridge/: ai.test.ts  ai.ts  color-utils.test.ts  color-utils.ts  confirmation.test.ts  confirmation.ts  customer-input.test.ts  customer-input.ts  (+9 more)
web/prisma/: dev.db  schema.prisma
(+9 files in other folders)
